--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/src\assets\umFitnessLogo.png">
+    <link rel="icon" type="image/png" href="/src/assets/umFitnessLogo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>UMFitness</title>
   </head>
